--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -4,7 +4,7 @@
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SgrVaPsDLCzZcZIrfFy0XPnEf876mOIor8VPOxg1B7U=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,11 +13,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST=host.docker.internal
+DB_PORT=6033
+DB_DATABASE=limitless_assets
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
